--- a/BotRegistrar/pom.xml
+++ b/BotRegistrar/pom.xml
@@ -48,5 +48,10 @@
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio-java-sdk</artifactId>
+			<version>5.3.0</version>
+		</dependency>
 	</dependencies>
 </project>
