--- a/BotRegistrar/pom.xml
+++ b/BotRegistrar/pom.xml
@@ -53,5 +53,11 @@
 			<artifactId>twilio-java-sdk</artifactId>
 			<version>5.3.0</version>
 		</dependency>
+		<dependency> 
+        <groupId>org.apache.httpcomponents</groupId> 
+        <artifactId>httpcore</artifactId> 
+        <version>4.4.1</version>
+<scope>runtime</scope>
+    </dependency> 
 	</dependencies>
 </project>
